@@ -1,3 +1,9 @@
+2024-11-22T12:27:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11972564392 # 970
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-11-22
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3328 / 0 3329 / +0 +1
+
 2024-11-22T01:08:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11964524473 # 969
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-11-22
